# pgstac-geoparquet-exporter

./: .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  docker.yml  release-please.yml
charts/pgstac-geoparquet-exporter/: .helmignore  CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/pgstac-geoparquet-exporter/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml
charts/pgstac-geoparquet-exporter/tests/: configmap_test.yaml  cronjob_test.yaml  helpers_test.yaml
scripts/: README.md  integration-test.sh  validate_parquet.py
scripts/integration/: 00-setup-cluster.sh  10-deploy-pgstac.sh  20-deploy-minio.sh  30-load-test-data.sh  40-run-export.sh  50-validate.sh  README.md  cleanup.sh  common.sh
scripts/integration/fixtures/: minio.yaml  pgstac-cluster.yaml  pgstac-migrate-job.yaml  stac-data-loader-job.yaml  test-collection.json  test-items.ndjson
src/pgstac_geoparquet_exporter/: __main__.py
tests/: test_pgstac_geoparquet_exporter.py
