[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pgstac-geoparquet-exporter"
version = "0.0.1"
description = "Export pgSTAC collections to GeoParquet."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pre-commit>=4.0.0",
    "mypy>=1.19.0",
]

[tool.setuptools]
packages = ["pgstac_geoparquet_exporter"]
package-dir = {"" = "src"}

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = false
